--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.hilt"
-        minSdkVersion 16
+        minSdkVersion 28
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -46,6 +46,7 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    dynamicFeatures = [':logviewer', ':contentProvider']
 }
 
 dependencies {
@@ -54,10 +55,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation project(':baseApp')
 
-    // Room
-    implementation "androidx.room:room-runtime:2.4.2"
-    kapt "androidx.room:room-compiler:2.4.2"
 
     // Testing dependencies
     androidTestImplementation "junit:junit:4.13.2"
@@ -69,7 +68,6 @@ dependencies {
     // Hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 }
